--- a/.github/workflows/sign_vbmeta.yml
+++ b/.github/workflows/sign_vbmeta.yml
@@ -32,16 +32,19 @@ jobs:
         chmod +x script1.sh
         ./script1.sh
 
-    - name: Package Signed VBMETA for Odin
-      run: |
-        mkdir output && cd output
-        mv ../vbmeta-signed.img vbmeta.img
-        tar cvf fastbootd-vbmeta.tar vbmeta.img
-        md5sum -t fastbootd-vbmeta.tar >> fastbootd-vbmeta.tar
-        mv fastbootd-vbmeta.tar fastbootd-vbmeta.tar.md5
-
-    - name: Upload Signed VBMETA for Odin
-      uses: actions/upload-artifact@v3.0.0
-      with:
-        path: /home/runner/work/SIGN_VBMETA/SIGN_VBMETA/output/*.md5
-        name: Signed-VBMETA
+        - name: Package Signed VBMETA for Odin
+        run: |
+          mkdir -p output
+          # Move the signed vbmeta file to the output directory
+          mv vbmeta-signed.img output/vbmeta.img
+          cd output
+          # Create the tar file and generate the MD5 checksum
+          tar cvf fastbootd-vbmeta.tar vbmeta.img
+          md5sum -t fastbootd-vbmeta.tar >> fastbootd-vbmeta.tar
+          mv fastbootd-vbmeta.tar fastbootd-vbmeta.tar.md5
+  
+      - name: Upload Signed VBMETA for Odin
+        uses: actions/upload-artifact@v3.0.0
+        with:
+          path: output/fastbootd-vbmeta.tar.md5
+          name: Signed-VBMETA
